fix: properly handle batch deletion errors to sustain manifest
(cherry picked from commit 2e7d77d037db387b5fce1afcad019e25e0a2a878)