@@ -11,10 +11,13 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
 import com.google.api.gax.paging.Page;
+import com.google.cloud.BatchResult.Callback;
 import com.google.cloud.storage.Blob;
 import com.google.cloud.storage.BlobId;
 import com.google.cloud.storage.BucketInfo;
 import com.google.cloud.storage.Storage;
+import com.google.cloud.storage.StorageBatch;
+import com.google.cloud.storage.StorageBatchResult;
 import com.google.cloud.storage.StorageException;
 import io.camunda.zeebe.backup.common.BackupIdentifierImpl;
 import io.camunda.zeebe.backup.common.FileSet;
@@ -29,6 +32,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Executors;
+import java.util.stream.IntStream;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -156,13 +160,18 @@ final class FileSetManagerTest {
     final var mockPage = mock(Page.class);
     when(mockPage.iterateAll()).thenReturn(List.of(mockBlob));
     when(storage.list(eq("bucket"), any())).thenReturn(mockPage);
+    final var mockBatch = mock(StorageBatch.class);
+    when(storage.batch()).thenReturn(mockBatch);
+    when(mockBatch.delete(any(BlobId.class))).thenReturn(mock(StorageBatchResult.class));
 
     // when
     final var collected = manager.collectBlobIds(backupIdentifier, "filesetName");
     manager.deleteBlobs(new ArrayList<>(collected));
 
     // then
-    verify(storage).delete(List.of(blobId));
+    verify(storage).batch();
+    verify(mockBatch).delete(blobId);
+    verify(mockBatch).submit();
   }
 
   @Test
@@ -177,31 +186,47 @@ final class FileSetManagerTest {
         .hasMessageContaining("expected");
   }
 
+  @SuppressWarnings("unchecked")
   @Test
   void shouldThrowExceptionWhenBatchDeleteThrows() {
     // given
     final var blobId = BlobId.of("bucket", "basePath/contents/1/2/3/filesetName/file");
-    when(storage.delete(List.of(blobId))).thenThrow(new StorageException(412, "expected"));
+    final var mockBatch = mock(StorageBatch.class);
+    when(storage.batch()).thenReturn(mockBatch);
+    final var mockResult = mock(StorageBatchResult.class);
+    when(mockBatch.delete(any(BlobId.class))).thenReturn(mockResult);
+    doAnswer(
+            inv -> {
+              final Callback<Boolean, StorageException> cb = inv.getArgument(0);
+              cb.error(new StorageException(412, "expected"));
+              return null;
+            })
+        .when(mockResult)
+        .notify(any());
 
     // when/then
     Assertions.assertThatThrownBy(() -> manager.deleteBlobs(List.of(blobId)))
-        .isInstanceOf(StorageException.class)
-        .hasMessageContaining("expected");
+        .isInstanceOf(RuntimeException.class)
+        .hasMessageContaining("Failures detected in the blob batch deletion");
   }
 
+  @SuppressWarnings("unchecked")
   @Test
   void shouldSplitDeleteAcrossMultipleBatches() {
     // given - 101 blobs exceeds MAX_DELETE_BATCH_SIZE (100)
     final var blobIds =
-        java.util.stream.IntStream.range(0, 101)
+        IntStream.range(0, 101)
             .mapToObj(i -> BlobId.of("bucket", "contents/1/2/3/file" + i))
-            .collect(java.util.stream.Collectors.toList());
+            .toList();
+    final var mockBatch = mock(StorageBatch.class);
+    when(storage.batch()).thenReturn(mockBatch);
+    when(mockBatch.delete(any(BlobId.class))).thenReturn(mock(StorageBatchResult.class));
 
     // when
     manager.deleteBlobs(blobIds);
 
     // then - two separate batch calls: first 100, then 1
-    verify(storage, times(2)).delete(any(Iterable.class));
+    verify(storage, times(2)).batch();
   }
 
   @Test
